force-app/main/default/objects/Location_Address_Book__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This field is used to enter the city.</description>
    <inlineHelpText>Enter your city.</inlineHelpText>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>