force-app/main/default/objects/Location_Address_Book__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>This field have list of all countries.</description>
    <inlineHelpText>Enter your country</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>All_Countries</valueSetName>
    </valueSet>
</CustomField>