force-app/main/default/objects/Location_Address_Book__c/fields/Landmark__c.field-meta.xml
<CustomField>
    <fullName>Landmark__c</fullName>
    <description>This field contains landmark.</description>
    <inlineHelpText>Enter a landmark</inlineHelpText>
    <label>Landmark</label>
    <length>50</length>
    <type>Text</type>
</CustomField>