force-app/main/default/objects/Location_Address_Book__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>This field is used to enter the postal code,</description>
    <inlineHelpText>Enter your postal code.</inlineHelpText>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>