force-app/main/default/objects/Location_Address_Book__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>This field is used to enter the state</description>
    <inlineHelpText>Enter your state.</inlineHelpText>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>