force-app/main/default/objects/Location_Address_Book__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>This field is used to enter the street</description>
    <inlineHelpText>Enter the street</inlineHelpText>
    <label>Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>